# fastapi.backend.remcostoeten.nl

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml  preview.yml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  blog.py  health.py  pageviews.py  visitors.py
app/core/: config.py  database.py
app/models/: __init__.py
app/schemas/: __init__.py  blog.py  health.py  pageviews.py  responses.py  visitors.py
app/services/: blog_service.py  pageview_service.py  visitor_service.py
scripts/: analytics_manager.py  deploy.sh  setup-railway.sh
tests/: conftest.py  test_health.py  test_integration.py
